# Generative-AI-using-LangChain

./: .env.example  .gitignore  README.md  pyproject.toml
1_Datasets/: article.txt
Code Implementation/: 1_Working_with_LLM.ipynb  2_Prompt_Engineering.ipynb  3_Document_Loaders.ipynb  4_Text_Splitter.ipynb  5_vector_store.ipynb
Code Implementation/chroma_db/e46a27d0-e6f0-458c-b13b-d75e2f6ada1b/: index_metadata.pickle
