[project]
name = "generative-ai-using-langchain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "chromadb>=1.5.9",
    "dotenv>=0.9.9",
    "gradio>=6.19.0",
    "langchain>=1.3.11",
    "langchain-community>=0.4.2",
    "langchain-huggingface>=1.2.2",
    "langchain-openai>=1.3.3",
    "matplotlib>=3.11.0",
    "numpy>=2.5.0",
    "pandas>=3.0.4",
    "pypdf>=6.14.2",
    "scikit-learn>=1.9.0",
    "sentence-transformers>=5.6.0",
    "tiktoken>=0.13.0",
]
